--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>br.eti.simao</groupId>
-	<artifactId>hibernatepoc</artifactId>
+	<groupId>jpa2poc</groupId>
+	<artifactId>jpa2poc</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>hibernate poc</name>
+	<name>JPA 2 PoC</name>
 	<dependencies>
 		<dependency>
 			<groupId>com.h2database</groupId>
